fix: current chat glitching + some UI changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "igdm",
+  "name": "IGdm",
   "version": "1.0.0",
   "description": "Desktop application for Instagram DMs",
   "main": "main.js",
