features: quote message, get unfollowers, render 'like' messages, render image messages add seen flags, configurable 'seen' singnals, label group message sender

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "fb": "^1.1.1",
     "instagram-private-api": "^0.5.15",
-    "node-notifier": "^5.1.2"
+    "node-notifier": "^5.1.2",
+    "nojs": "^0.1.1"
   },
   "devDependencies": {
     "electron-prebuilt": "^1.2.0",
