--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "IGdm",
-  "version": "2.0.1",
+  "version": "2.0.2-alpha1",
   "description": "Desktop application for Instagram DMs",
   "main": "main.js",
   "scripts": {
