--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   "author": "ifedapo olarewaju",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "electron-log": "^2.2.6",
     "electron-updater": "^2.8.9",
     "fb": "^2.0.0",
-    "instagram-private-api": "^0.6.6",
+    "instagram-private-api": "^0.6.7",
     "node-notifier": "^5.1.2",
     "nojs": "^0.1.1"
   },
