--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "electron-log": "^2.2.6",
     "electron-updater": "^2.8.9",
     "fb": "^2.0.0",
-    "instagram-private-api": "^0.6.7",
+    "instagram-private-api": "github:huttarichard/instagram-private-api#66ab6c4293daac88dba18333c641889299145316",
     "node-notifier": "^5.1.2",
     "nojs": "^0.1.1"
   },
