--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "IGdm",
+  "name": "igdm",
   "version": "2.3.1",
   "description": "Desktop application for Instagram DMs",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "pack": "build --dir",
-    "dist": "build -mwl --x64"
+    "start": "gulp build && electron .",
+    "pack": "gulp build && build --dir",
+    "dist": "gulp build && build -mwl --x64"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,9 @@
   },
   "devDependencies": {
     "electron": "^1.7.8",
-    "electron-builder": "^19.27.3"
+    "electron-builder": "^19.27.3",
+    "gulp": "^3.9.1",
+    "gulp-pug": "^3.3.0"
   },
   "build": {
     "publish": [
