--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "bootstrap": "^4.0.0",
     "electron-log": "^2.2.6",
     "electron-updater": "^2.8.9",
     "fb": "^2.0.0",
