--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "igdm",
+  "name": "IGdm",
   "version": "2.3.1",
   "description": "Desktop application for Instagram DMs",
   "main": "main.js",
