--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "electron-builder-lib": "^20.0.0",
     "electron-builder-squirrel-windows": "^20.0.0",
     "gulp": "^3.9.1",
-    "gulp-pug": "^3.3.0"
+    "gulp-htmlmin": "^4.0.0",
+    "gulp-pug": "^3.3.0",
+    "jstransformer-markdown-it": "^2.0.0"
   },
   "build": {
     "publish": [
