--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "IGdm",
-  "version": "2.4.0",
+  "version": "2.4.1",
   "description": "Desktop application for Instagram DMs",
   "main": "main/main.js",
   "scripts": {
@@ -64,7 +64,8 @@
     "linux": {
       "target": [
         "AppImage",
-        "zip"
+        "zip",
+        "deb"
       ],
       "maintainer": "Ifedapo Olarewaju <ifedapoolarewaju@gmail.com>"
     }
