changes nut.yml to use `npm start` and removes unnecessary `npm run gui`
As requested in https://github.com/ifedapoolarewaju/igdm/pull/123

Signed-off-by: Alax Alves <alaxallves@gmail.com>

--- a/nut.yml
+++ b/nut.yml
@@ -17,8 +17,7 @@ macros:
   run:
     actions:
     - npm install
-    - npm run build
-    - npm run gui
+    - npm start
 
   reload:
     actions:
