--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ language: node_js
 node_js:
     - "8" # use latest LTS
 
+before_install:
+    - npm install npm@latest -g
+
 script:
     - npm audit
