--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "electron-log": "^2.2.6",
     "electron-updater": "^2.21.10",
     "fb": "^2.0.0",
-    "instagram-private-api": "^0.6.8",
+    "instagram-private-api": "github:ifedapoolarewaju/instagram-private-api#cd4955751a4b4e111bcb20633c53db2ed15a8671",
     "node-notifier": "^5.1.2",
     "nojs": "^0.1.1"
   },
