Add initial dependencies and tests required for testing
We will use Intern as a testing framework because it seamlessly
integrates with chai for running tests, as well as vast testing
capabilities and onboard TypeScript support.

The sample.js contains a simple test that should integrate with TravisCI
and will be deleted when tests are implemented.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp": "^4.0.0",
     "gulp-htmlmin": "^4.0.0",
     "gulp-pug": "^3.3.0",
+    "intern": "^4.3.3",
     "jstransformer-markdown-it": "^2.0.0"
   },
   "build": {
@@ -76,5 +77,8 @@
       "publish": "github",
       "maintainer": "Ifedapo Olarewaju <ifedapoolarewaju@gmail.com>"
     }
+  },
+  "scripts": {
+    "test": "intern"
   }
 }
