--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   "author": "ifedapo olarewaju",
   "license": "MIT",
   "dependencies": {
-    "bluebird": "^3.5.0",
-    "bootstrap": "^4.0.0",
-    "electron-log": "^2.2.6",
+    "bluebird": "3.5.2",
+    "bootstrap": "4.1.3",
+    "electron-log": "2.2.17",
     "electron-updater": "^2.21.10",
     "fb": "^2.0.0",
     "instagram-private-api": "github:ifedapoolarewaju/instagram-private-api#cd4955751a4b4e111bcb20633c53db2ed15a8671",
@@ -32,10 +32,10 @@
     "nojs": "^0.1.1"
   },
   "devDependencies": {
-    "electron": "^2.0.2",
-    "electron-builder": "^20.16.4",
-    "electron-builder-lib": "^20.16.4",
-    "electron-builder-squirrel-windows": "^20.15.0",
+    "electron": "2.0.12",
+    "electron-builder": "20.28.4",
+    "electron-builder-lib": "20.23.1",
+    "electron-builder-squirrel-windows": "20.29.0",
     "gulp": "^4.0.0",
     "gulp-htmlmin": "^4.0.0",
     "gulp-pug": "^3.3.0",
