--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "3.5.2",
-    "bootstrap": "4.1.3",
+    "bootstrap": "^4.3.1",
     "electron-log": "2.2.17",
     "electron-updater": "^4.0.0",
     "fb": "^2.0.0",
-    "instagram-private-api": "github:ifedapoolarewaju/instagram-private-api#798d6590a4548d69cba51a9482998d706ee89221",
+    "instagram-private-api": "github:ifedapoolarewaju/instagram-private-api#7a1078c77b519d00587b17620f9f83266ef235f2",
     "node-notifier": "^5.1.2",
     "nojs": "^0.1.1"
   },
@@ -40,6 +40,10 @@
     "gulp-htmlmin": "^4.0.0",
     "gulp-pug": "^3.3.0",
     "jstransformer-markdown-it": "^2.0.0"
+  },
+  "optionalDependencies": {
+    "jquery": "1.9.1 - 3",
+    "popper.js": "^1.14.7"
   },
   "build": {
     "publish": [
