--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Desktop application for Instagram DMs",
   "main": "main/main.js",
   "scripts": {
-    "start": "gulp build && electron .",
+    "start": "gulp",
     "pack": "gulp build && build --dir",
     "dist": "gulp build && build -mwl --x64"
   },
@@ -24,6 +24,7 @@
   "dependencies": {
     "bluebird": "3.5.2",
     "bootstrap": "^4.4.1",
+    "electron-connect": "^0.6.3",
     "electron-log": "2.2.17",
     "electron-updater": "^4.2.0",
     "fb": "^2.0.0",
@@ -32,13 +33,14 @@
     "nojs": "^0.1.3"
   },
   "devDependencies": {
-    "electron": "2.0.12",
+    "electron": "^3.0",
     "electron-builder": "^20.44.4",
     "electron-builder-lib": "20.23.1",
     "electron-builder-squirrel-windows": "20.29.0",
     "gulp": "^4.0.2",
     "gulp-htmlmin": "^4.0.0",
     "gulp-pug": "^3.3.0",
+    "gulp-watch": "^5.0.1",
     "jstransformer-markdown-it": "^2.1.0"
   },
   "optionalDependencies": {
