--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "version": "2.8.1",
   "description": "Desktop application for Instagram DMs",
   "main": "main/main.js",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && git add"
+    }
+  },
   "scripts": {
+    "lint-browser": "eslint --fix --ext .js ./browser/",
+    "lint-main": "eslint --fix --ext .js ./main/",
+    "lint": "npm run lint-browser && npm run lint-main",
     "start": "gulp",
     "pack": "gulp build && build --dir",
     "dist": "gulp build && build -mwl --x64"
@@ -37,9 +45,11 @@
     "electron-builder-lib": "20.23.1",
     "electron-builder-squirrel-windows": "20.29.0",
     "electron-connect": "^0.6.3",
+    "eslint": "^6.8.0",
     "gulp": "^4.0.2",
     "gulp-htmlmin": "^4.0.0",
     "gulp-pug": "^3.3.0",
+    "husky": "^4.2.3",
     "jstransformer-markdown-it": "^2.1.0"
   },
   "optionalDependencies": {
