--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "ifedapo olarewaju",
   "license": "MIT",
   "dependencies": {
+    "auto-launch": "^5.0.5",
     "bluebird": "3.5.2",
     "bootstrap": "^4.4.1",
     "electron-log": "2.2.17",
@@ -37,14 +38,14 @@
     "fb": "^2.0.0",
     "instagram-private-api": "github:ifedapoolarewaju/instagram-private-api#14832f88001746d994c2ef4604cd29a1b858a6f5",
     "node-notifier": "^5.4.3",
-    "nojs": "^0.1.3"
+    "nojs": "^0.1.3",
+    "electron-connect": "^0.6.3"
   },
   "devDependencies": {
     "electron": "^3.0.16",
     "electron-builder": "^20.44.4",
     "electron-builder-lib": "20.23.1",
     "electron-builder-squirrel-windows": "20.29.0",
-    "electron-connect": "^0.6.3",
     "eslint": "^6.8.0",
     "gulp": "^4.0.2",
     "gulp-htmlmin": "^4.0.0",
