update website version

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
       }
     ],
     "appId": "com.ifedapoolarewaju.desktop.igdm",
-    "copyright": "ifedapo Olarewaju 2018",
+    "copyright": "ifedapo Olarewaju 2017 - 2020",
     "mac": {
       "target": [
         "dmg",
