--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "electron-log": "2.2.17",
     "electron-updater": "^4.2.0",
     "fb": "^2.0.0",
-    "instagram-private-api": "^1.39.1",
+    "instagram-private-api": "^1.44.1",
     "node-notifier": "^5.4.3",
     "nojs": "^0.1.3"
   },
   "devDependencies": {
-    "electron": "^3.0.16",
-    "electron-builder": "^20.44.4",
+    "electron": "10.4.2",
+    "electron-builder": "^22.10.5",
     "electron-builder-lib": "20.23.1",
     "electron-builder-squirrel-windows": "20.29.0",
     "eslint": "^6.8.0",
