--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "bootstrap": "^4.4.1",
     "electron-connect": "^0.6.3",
     "electron-log": "2.2.17",
-    "electron-updater": "^4.2.0",
+    "electron-updater": "4.3.9",
     "fb": "^2.0.0",
-    "instagram-private-api": "^1.44.1",
+    "instagram-private-api": "^1.45.3",
     "moment": "^2.25.1",
     "node-notifier": "^5.4.3",
     "nojs": "^0.1.3"
