--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "instagram-private-api": "^1.45.3",
     "moment": "^2.25.1",
     "node-notifier": "^5.4.3",
-    "nojs": "^0.1.3"
+    "nojs": "^0.1.3",
+    "playwright": "^1.27.1"
   },
   "devDependencies": {
     "electron": "10.4.2",
